--- a/index.html
+++ b/index.html
@@ -311,13 +311,308 @@
         </section>
         <!--______________________________SC END______________________________________-->
         <section class="section white-text section5" id="section5">
-                              <div id="space">
-  <div class="stars"></div>
-  <div class="stars"></div>
-  <div class="stars"></div>
-  <div class="stars"></div>
-  <div class="stars"></div>
-</div>
+                <div class="stars">
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+  <div class="container">
+    <div class="star"></div>
+  </div>
+</div>              
               <div class="container">  
                 <div class="columns is-multiline">
 
